# fastapi-notes-telegram

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  start_dev_server.sh
alembic/: env.py
alembic/versions/: 2024_10_05_2157-d48be6d77929_create_user_notes_tags_tables.py
app/: main.py
app/api/: note.py
app/core/: config.py  security.py
app/crud/: note.py
app/db/: base.py  session.py
app/models/: __init__.py  note.py  user.py
app/schemas/: note.py
