[tool.poetry]
name = "fastapi-notes-telegram"
version = "0.1.0"
description = "Asyncronus web app based on FastAPI, which provides a personal notes management service! Async Telegram included!"
authors = ["Lordd1s <uaudias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
fastapi = {extras = ["all"], version = "^0.115.0"}
Jinja2 = "^3.1.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
uvloop = "^0.20.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
